Proyecto/TEMPLATE-decaf/decaf_grammar.output
State 7 conflicts: 2 shift/reduce
State 12 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_def

    2 class_def: "'class'" class_name '{' optional_field_decl_list optional_method_decl_list '}'

    3 optional_field_decl_list: field_decl_list
    4                         | /* empty */

    5 optional_method_decl_list: method_decl_list
    6                          | /* empty */

    7 field_decl_list: field_decl field_decl_list
    8                | field_decl

    9 method_decl_list: method_decl_list method_decl
   10                 | method_decl

   11 class_name: "'identificador'"

   12 field_decl: type var_list ';'

   13 var_list: var_list ',' var
   14         | var

   15 var: "'identificador'" optional_initialization
   16    | "'identificador'" '[' "constante entera" ']'

   17 optional_initialization: '=' constant
   18                        | /* empty */

   19 method_decl: return_type "'identificador'" '(' opt_parameter_decl_list ')' block

   20 return_type: type
   21            | "'void'"

   22 opt_parameter_decl_list: parameter_decl_list
   23                        | /* empty */

   24 parameter_decl_list: parameter_decl_list ',' parameter_decl
   25                    | parameter_decl

   26 parameter_decl: type "'identificador'"

   27 block: '{' opt_var_decl_list opt_statement_list '}'

   28 opt_var_decl_list: var_decl_list
   29                  | /* empty */

   30 opt_statement_list: statement_list
   31                   | /* empty */

   32 var_decl_list: var_decl_list var_decl
   33              | var_decl

   34 var_decl: type var_list ';'

   35 type: "'int'"
   36     | "'boolean'"

   37 statement_list: statement_list statement
   38               | statement

   39 statement: assign ';'
   40          | method_call ';'
   41          | if_statement
   42          | while_statement
   43          | for_statement
   44          | return_statement ';'
   45          | break_statement ';'
   46          | continue_statement ';'
   47          | block

   48 assign: lvalue '=' expr

   49 method_call: method_name '(' opt_method_call_argument_list ')'
   50            | "'print'" print_argument_list
   51            | "'read'" read_argument_list

   52 method_name: "'identificador'"

   53 opt_method_call_argument_list: method_call_argument_list
   54                              | /* empty */

   55 method_call_argument_list: method_call_argument_list ',' expr
   56                          | expr

   57 print_argument_list: print_argument_list ',' print_argument
   58                    | print_argument

   59 print_argument: "constante de cadena"
   60               | expr

   61 read_argument_list: read_argument_list ',' lvalue
   62                   | lvalue

   63 lvalue: "'identificador'" opt_array_dimension

   64 opt_array_dimension: '[' expr ']'
   65                    | /* empty */

   66 if_statement: "'if'" '(' expr ')' block opt_else

   67 opt_else: "'else'" block
   68         | /* empty */

   69 while_statement: "'while'" '(' expr ')' block

   70 for_statement: "'for'" '(' for_assignment_list ';' expr ';' for_assignment_list ')' block

   71 for_assignment_list: for_assignment_list ',' assign
   72                    | assign

   73 return_statement: "'return'" opt_expr

   74 break_statement: "'break'"

   75 continue_statement: "'continue'"

   76 opt_expr: expr
   77         | /* empty */

   78 expr: expr "operador booleano 'or'" bool_term
   79     | bool_term

   80 bool_term: bool_term "operador booleano 'and'" relational_expr
   81          | relational_expr

   82 relational_expr: relational_expr "operador relacional '>', '<', '>=', '<=', '==' o '!='" bit_shift_expr
   83                | bit_shift_expr

   84 bit_shift_expr: bit_shift_expr "operador de corrimiento de bits" arith_expr
   85               | arith_expr

   86 arith_expr: arith_expr "operador aritmetico '+' o '-'" arith_term
   87           | arith_term

   88 arith_term: arith_term "operador aritmetico '*', '/', '%' " factor
   89           | factor

   90 factor: '!' factor
   91       | "operador aritmetico '+' o '-'" factor
   92       | lvalue
   93       | method_name '(' opt_method_call_argument_list ')'
   94       | constant
   95       | '(' expr ')'

   96 constant: "constante entera"
   97         | "constante caracter"
   98         | "constante real"
   99         | bool_constant

  100 bool_constant: "'true'"
  101              | "'false'"


Terminals, with rules where they appear

$end (0) 0
'!' (33) 90
'(' (40) 19 49 66 69 70 93 95
')' (41) 19 49 66 69 70 93 95
',' (44) 13 24 55 57 61 71
';' (59) 12 34 39 40 44 45 46 70
'=' (61) 17 48
'[' (91) 16 64
']' (93) 16 64
'{' (123) 2 27
'}' (125) 2 27
error (256)
"'identificador'" (258) 11 15 16 19 26 52 63
"'class'" (259) 2
"'break'" (260) 74
"'continue'" (261) 75
"'while'" (262) 69
"'for'" (263) 70
"'if'" (264) 66
"'else'" (265) 67
"'return'" (266) 73
"'read'" (267) 51
"'print'" (268) 50
"'true'" (269) 100
"'false'" (270) 101
"'int'" (271) 35
"'void'" (272) 21
"'boolean'" (273) 36
"operador booleano 'or'" (274) 78
"operador booleano 'and'" (275) 80
"operador de corrimiento de bits" (276) 84
"operador relacional '>', '<', '>=', '<=', '==' o '!='" (277) 82
"operador aritmetico '+' o '-'" (278) 86 91
"operador aritmetico '*', '/', '%' " (279) 88
"constante caracter" (280) 97
"constante entera" (281) 16 96
"constante real" (282) 98
"constante de cadena" (283) 59


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
class_def (41)
    on left: 2, on right: 1
optional_field_decl_list (42)
    on left: 3 4, on right: 2
optional_method_decl_list (43)
    on left: 5 6, on right: 2
field_decl_list (44)
    on left: 7 8, on right: 3 7
method_decl_list (45)
    on left: 9 10, on right: 5 9
class_name (46)
    on left: 11, on right: 2
field_decl (47)
    on left: 12, on right: 7 8
var_list (48)
    on left: 13 14, on right: 12 13 34
var (49)
    on left: 15 16, on right: 13 14
optional_initialization (50)
    on left: 17 18, on right: 15
method_decl (51)
    on left: 19, on right: 9 10
return_type (52)
    on left: 20 21, on right: 19
opt_parameter_decl_list (53)
    on left: 22 23, on right: 19
parameter_decl_list (54)
    on left: 24 25, on right: 22 24
parameter_decl (55)
    on left: 26, on right: 24 25
block (56)
    on left: 27, on right: 19 47 66 67 69 70
opt_var_decl_list (57)
    on left: 28 29, on right: 27
opt_statement_list (58)
    on left: 30 31, on right: 27
var_decl_list (59)
    on left: 32 33, on right: 28 32
var_decl (60)
    on left: 34, on right: 32 33
type (61)
    on left: 35 36, on right: 12 20 26 34
statement_list (62)
    on left: 37 38, on right: 30 37
statement (63)
    on left: 39 40 41 42 43 44 45 46 47, on right: 37 38
assign (64)
    on left: 48, on right: 39 71 72
method_call (65)
    on left: 49 50 51, on right: 40
method_name (66)
    on left: 52, on right: 49 93
opt_method_call_argument_list (67)
    on left: 53 54, on right: 49 93
method_call_argument_list (68)
    on left: 55 56, on right: 53 55
print_argument_list (69)
    on left: 57 58, on right: 50 57
print_argument (70)
    on left: 59 60, on right: 57 58
read_argument_list (71)
    on left: 61 62, on right: 51 61
lvalue (72)
    on left: 63, on right: 48 61 62 92
opt_array_dimension (73)
    on left: 64 65, on right: 63
if_statement (74)
    on left: 66, on right: 41
opt_else (75)
    on left: 67 68, on right: 66
while_statement (76)
    on left: 69, on right: 42
for_statement (77)
    on left: 70, on right: 43
for_assignment_list (78)
    on left: 71 72, on right: 70 71
return_statement (79)
    on left: 73, on right: 44
break_statement (80)
    on left: 74, on right: 45
continue_statement (81)
    on left: 75, on right: 46
opt_expr (82)
    on left: 76 77, on right: 73
expr (83)
    on left: 78 79, on right: 48 55 56 60 64 66 69 70 76 78 95
bool_term (84)
    on left: 80 81, on right: 78 79 80
relational_expr (85)
    on left: 82 83, on right: 80 81 82
bit_shift_expr (86)
    on left: 84 85, on right: 82 83 84
arith_expr (87)
    on left: 86 87, on right: 84 85 86
arith_term (88)
    on left: 88 89, on right: 86 87 88
factor (89)
    on left: 90 91 92 93 94 95, on right: 88 89 90 91
constant (90)
    on left: 96 97 98 99, on right: 17 94
bool_constant (91)
    on left: 100 101, on right: 99


state 0

    0 $accept: . program $end
    1 program: . class_def
    2 class_def: . "'class'" class_name '{' optional_field_decl_list optional_method_decl_list '}'

    "'class'"  shift, and go to state 1

    program    go to state 2
    class_def  go to state 3


state 1

    2 class_def: "'class'" . class_name '{' optional_field_decl_list optional_method_decl_list '}'
   11 class_name: . "'identificador'"

    "'identificador'"  shift, and go to state 4

    class_name  go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_def .

    $default  reduce using rule 1 (program)


state 4

   11 class_name: "'identificador'" .

    $default  reduce using rule 11 (class_name)


state 5

    2 class_def: "'class'" class_name . '{' optional_field_decl_list optional_method_decl_list '}'

    '{'  shift, and go to state 7


state 6

    0 $accept: program $end .

    $default  accept


state 7

    2 class_def: "'class'" class_name '{' . optional_field_decl_list optional_method_decl_list '}'
    3 optional_field_decl_list: . field_decl_list
    4                         | .  ["'int'", "'void'", "'boolean'", '}']
    7 field_decl_list: . field_decl field_decl_list
    8                | . field_decl
   12 field_decl: . type var_list ';'
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'boolean'"  shift, and go to state 9

    "'int'"      [reduce using rule 4 (optional_field_decl_list)]
    "'boolean'"  [reduce using rule 4 (optional_field_decl_list)]
    $default     reduce using rule 4 (optional_field_decl_list)

    optional_field_decl_list  go to state 10
    field_decl_list           go to state 11
    field_decl                go to state 12
    type                      go to state 13


state 8

   35 type: "'int'" .

    $default  reduce using rule 35 (type)


state 9

   36 type: "'boolean'" .

    $default  reduce using rule 36 (type)


state 10

    2 class_def: "'class'" class_name '{' optional_field_decl_list . optional_method_decl_list '}'
    5 optional_method_decl_list: . method_decl_list
    6                          | .  ['}']
    9 method_decl_list: . method_decl_list method_decl
   10                 | . method_decl
   19 method_decl: . return_type "'identificador'" '(' opt_parameter_decl_list ')' block
   20 return_type: . type
   21            | . "'void'"
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'void'"     shift, and go to state 14
    "'boolean'"  shift, and go to state 9

    $default  reduce using rule 6 (optional_method_decl_list)

    optional_method_decl_list  go to state 15
    method_decl_list           go to state 16
    method_decl                go to state 17
    return_type                go to state 18
    type                       go to state 19


state 11

    3 optional_field_decl_list: field_decl_list .

    $default  reduce using rule 3 (optional_field_decl_list)


state 12

    7 field_decl_list: . field_decl field_decl_list
    7                | field_decl . field_decl_list
    8                | . field_decl
    8                | field_decl .  ["'int'", "'void'", "'boolean'", '}']
   12 field_decl: . type var_list ';'
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'boolean'"  shift, and go to state 9

    "'int'"      [reduce using rule 8 (field_decl_list)]
    "'boolean'"  [reduce using rule 8 (field_decl_list)]
    $default     reduce using rule 8 (field_decl_list)

    field_decl_list  go to state 20
    field_decl       go to state 12
    type             go to state 13


state 13

   12 field_decl: type . var_list ';'
   13 var_list: . var_list ',' var
   14         | . var
   15 var: . "'identificador'" optional_initialization
   16    | . "'identificador'" '[' "constante entera" ']'

    "'identificador'"  shift, and go to state 21

    var_list  go to state 22
    var       go to state 23


state 14

   21 return_type: "'void'" .

    $default  reduce using rule 21 (return_type)


state 15

    2 class_def: "'class'" class_name '{' optional_field_decl_list optional_method_decl_list . '}'

    '}'  shift, and go to state 24


state 16

    5 optional_method_decl_list: method_decl_list .  ['}']
    9 method_decl_list: method_decl_list . method_decl
   19 method_decl: . return_type "'identificador'" '(' opt_parameter_decl_list ')' block
   20 return_type: . type
   21            | . "'void'"
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'void'"     shift, and go to state 14
    "'boolean'"  shift, and go to state 9

    $default  reduce using rule 5 (optional_method_decl_list)

    method_decl  go to state 25
    return_type  go to state 18
    type         go to state 19


state 17

   10 method_decl_list: method_decl .

    $default  reduce using rule 10 (method_decl_list)


state 18

   19 method_decl: return_type . "'identificador'" '(' opt_parameter_decl_list ')' block

    "'identificador'"  shift, and go to state 26


state 19

   20 return_type: type .

    $default  reduce using rule 20 (return_type)


state 20

    7 field_decl_list: field_decl field_decl_list .

    $default  reduce using rule 7 (field_decl_list)


state 21

   15 var: "'identificador'" . optional_initialization
   16    | "'identificador'" . '[' "constante entera" ']'
   17 optional_initialization: . '=' constant
   18                        | .  [';', ',']

    '['  shift, and go to state 27
    '='  shift, and go to state 28

    $default  reduce using rule 18 (optional_initialization)

    optional_initialization  go to state 29


state 22

   12 field_decl: type var_list . ';'
   13 var_list: var_list . ',' var

    ';'  shift, and go to state 30
    ','  shift, and go to state 31


state 23

   14 var_list: var .

    $default  reduce using rule 14 (var_list)


state 24

    2 class_def: "'class'" class_name '{' optional_field_decl_list optional_method_decl_list '}' .

    $default  reduce using rule 2 (class_def)


state 25

    9 method_decl_list: method_decl_list method_decl .

    $default  reduce using rule 9 (method_decl_list)


state 26

   19 method_decl: return_type "'identificador'" . '(' opt_parameter_decl_list ')' block

    '('  shift, and go to state 32


state 27

   16 var: "'identificador'" '[' . "constante entera" ']'

    "constante entera"  shift, and go to state 33


state 28

   17 optional_initialization: '=' . constant
   96 constant: . "constante entera"
   97         | . "constante caracter"
   98         | . "constante real"
   99         | . bool_constant
  100 bool_constant: . "'true'"
  101              | . "'false'"

    "'true'"              shift, and go to state 34
    "'false'"             shift, and go to state 35
    "constante caracter"  shift, and go to state 36
    "constante entera"    shift, and go to state 37
    "constante real"      shift, and go to state 38

    constant       go to state 39
    bool_constant  go to state 40


state 29

   15 var: "'identificador'" optional_initialization .

    $default  reduce using rule 15 (var)


state 30

   12 field_decl: type var_list ';' .

    $default  reduce using rule 12 (field_decl)


state 31

   13 var_list: var_list ',' . var
   15 var: . "'identificador'" optional_initialization
   16    | . "'identificador'" '[' "constante entera" ']'

    "'identificador'"  shift, and go to state 21

    var  go to state 41


state 32

   19 method_decl: return_type "'identificador'" '(' . opt_parameter_decl_list ')' block
   22 opt_parameter_decl_list: . parameter_decl_list
   23                        | .  [')']
   24 parameter_decl_list: . parameter_decl_list ',' parameter_decl
   25                    | . parameter_decl
   26 parameter_decl: . type "'identificador'"
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'boolean'"  shift, and go to state 9

    $default  reduce using rule 23 (opt_parameter_decl_list)

    opt_parameter_decl_list  go to state 42
    parameter_decl_list      go to state 43
    parameter_decl           go to state 44
    type                     go to state 45


state 33

   16 var: "'identificador'" '[' "constante entera" . ']'

    ']'  shift, and go to state 46


state 34

  100 bool_constant: "'true'" .

    $default  reduce using rule 100 (bool_constant)


state 35

  101 bool_constant: "'false'" .

    $default  reduce using rule 101 (bool_constant)


state 36

   97 constant: "constante caracter" .

    $default  reduce using rule 97 (constant)


state 37

   96 constant: "constante entera" .

    $default  reduce using rule 96 (constant)


state 38

   98 constant: "constante real" .

    $default  reduce using rule 98 (constant)


state 39

   17 optional_initialization: '=' constant .

    $default  reduce using rule 17 (optional_initialization)


state 40

   99 constant: bool_constant .

    $default  reduce using rule 99 (constant)


state 41

   13 var_list: var_list ',' var .

    $default  reduce using rule 13 (var_list)


state 42

   19 method_decl: return_type "'identificador'" '(' opt_parameter_decl_list . ')' block

    ')'  shift, and go to state 47


state 43

   22 opt_parameter_decl_list: parameter_decl_list .  [')']
   24 parameter_decl_list: parameter_decl_list . ',' parameter_decl

    ','  shift, and go to state 48

    $default  reduce using rule 22 (opt_parameter_decl_list)


state 44

   25 parameter_decl_list: parameter_decl .

    $default  reduce using rule 25 (parameter_decl_list)


state 45

   26 parameter_decl: type . "'identificador'"

    "'identificador'"  shift, and go to state 49


state 46

   16 var: "'identificador'" '[' "constante entera" ']' .

    $default  reduce using rule 16 (var)


state 47

   19 method_decl: return_type "'identificador'" '(' opt_parameter_decl_list ')' . block
   27 block: . '{' opt_var_decl_list opt_statement_list '}'

    '{'  shift, and go to state 50

    block  go to state 51


state 48

   24 parameter_decl_list: parameter_decl_list ',' . parameter_decl
   26 parameter_decl: . type "'identificador'"
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'boolean'"  shift, and go to state 9

    parameter_decl  go to state 52
    type            go to state 45


state 49

   26 parameter_decl: type "'identificador'" .

    $default  reduce using rule 26 (parameter_decl)


state 50

   27 block: '{' . opt_var_decl_list opt_statement_list '}'
   28 opt_var_decl_list: . var_decl_list
   29                  | .  ["'identificador'", "'break'", "'continue'", "'while'", "'for'", "'if'", "'return'", "'read'", "'print'", '{', '}']
   32 var_decl_list: . var_decl_list var_decl
   33              | . var_decl
   34 var_decl: . type var_list ';'
   35 type: . "'int'"
   36     | . "'boolean'"

    "'int'"      shift, and go to state 8
    "'boolean'"  shift, and go to state 9

    $default  reduce using rule 29 (opt_var_decl_list)

    opt_var_decl_list  go to state 53
    var_decl_list      go to state 54
    var_decl           go to state 55
    type               go to state 56


state 51

   19 method_decl: return_type "'identificador'" '(' opt_parameter_decl_list ')' block .

    $default  reduce using rule 19 (method_decl)


state 52

   24 parameter_decl_list: parameter_decl_list ',' parameter_decl .

    $default  reduce using rule 24 (parameter_decl_list)


state 53

   27 block: . '{' opt_var_decl_list opt_statement_list '}'
   27      | '{' opt_var_decl_list . opt_statement_list '}'
   30 opt_statement_list: . statement_list
   31                   | .  ['}']
   37 statement_list: . statement_list statement
   38               | . statement
   39 statement: . assign ';'
   40          | . method_call ';'
   41          | . if_statement
   42          | . while_statement
   43          | . for_statement
   44          | . return_statement ';'
   45          | . break_statement ';'
   46          | . continue_statement ';'
   47          | . block
   48 assign: . lvalue '=' expr
   49 method_call: . method_name '(' opt_method_call_argument_list ')'
   50            | . "'print'" print_argument_list
   51            | . "'read'" read_argument_list
   52 method_name: . "'identificador'"
   63 lvalue: . "'identificador'" opt_array_dimension
   66 if_statement: . "'if'" '(' expr ')' block opt_else
   69 while_statement: . "'while'" '(' expr ')' block
   70 for_statement: . "'for'" '(' for_assignment_list ';' expr ';' for_assignment_list ')' block
   73 return_statement: . "'return'" opt_expr
   74 break_statement: . "'break'"
   75 continue_statement: . "'continue'"

    "'identificador'"  shift, and go to state 57
    "'break'"          shift, and go to state 58
    "'continue'"       shift, and go to state 59
    "'while'"          shift, and go to state 60
    "'for'"            shift, and go to state 61
    "'if'"             shift, and go to state 62
    "'return'"         shift, and go to state 63
    "'read'"           shift, and go to state 64
    "'print'"          shift, and go to state 65
    '{'                shift, and go to state 50

    $default  reduce using rule 31 (opt_statement_list)

    block               go to state 66
    opt_statement_list  go to state 67
    statement_list      go to state 68
    statement           go to state 69
    assign              go to state 70
    method_call         go to state 71
    method_name         go to state 72
    lvalue              go to state 73
    if_statement        go to state 74
    while_statement     go to state 75
    for_statement       go to state 76
    return_statement    go to state 77
    break_statement     go to state 78
    continue_statement  go to state 79


state 54
